--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.mongodb:mongodb-driver-sync:4.1.1'
+    implementation 'org.mongodb:mongo-java-driver:2.12.3'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.0'
 
 }
